# bookstore

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_models.py  test_serializer.py
order/tests/test_viewset/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category_and_more.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_models.py  test_serializers.py
product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
